* Added ParentCamera property for cameras (useful for cascading cameras or Fixed/UI camera trick for portrait<->landscape adaptation)
* Added __orxFREEBASIC__ define for free basic friendly build of orx
* orxClock_RemoveTimer() can now filter using the registered context
* Added events orxCONFIG_EVENT_RELOAD_START, orxCONFIG_EVENT_RELOAD_END & orxCONFIG_EVENT_INVALID_TYPE_ACCESS
* Fixed constness of all orxSTRING related code
* Fixed FPS display position when aspect ratio is not 1:1
* Removed a couple of warnings from external library Box2D
* Fixed some minor issues in SFML-based sound plugin
* Config raw sections/values can now be accessed at runtime (used in EyeCreate's orx config editor Pey)
* Fixed sound attenuation ratio in SFML plugin
* Added Config::IgnorePath parameter to ignore all paths when loading resources (useful for iPhone bundles were all files are in the root folder)
* Fixed wrong LICENSE file (GPL->LGPL)
* Some optims / cleaning

orx 1.1
-----
* Added orxCrypt command line tool for merging/encrypting/decrypting config files
* Added owner to spawner structure + all missing accessors for runtime handling
* Added associated clock to objects so as to allow localized time stretching (including sound pitch alteration)
* Clocks can now be created from config files and directly from objects. There can be only one clock with a given name (like cameras)
* IMPORTANT: Renamed spawner's WaveNumber property to WaveSize
* IMPORTANT: World gravity now use the physics dimension ratio -> update your config files accordingly
* orxCLOCK is now an orxSTRUCTURE
* Added timer handling functions in clock module
* Fixed aspect ratio correction when viewport was narrower than camera
* Added custom events for animations
* Integrated current Box2D version from its svn repository
* Added Raycast feature when physics is enabled (+wrappers in body & object modules)
* Dynamic objects can now have parents and get the cumulated result move from parents + physics simulation!